# mem-rs

./: AGENTS.md  Cargo.toml
.mem/master/spec/: index.md
src/: cli.rs  config.rs  git.rs  main.rs
src/commands/: add.rs  context.rs  list.rs  mod.rs
src/commands/context/: init.rs  profiles.rs  render.rs  show.rs
src/commands/log/: add.rs  list.rs
src/context/: mod.rs
tests/: add.rs  context_init.rs  context_path.rs  context_render.rs  context_render_base.rs  context_show.rs  helpers.rs  list.rs  log.rs
